fixed invisible search results

--- a/public/js/views/menu/room/primary-collection/primary-collection-item-view.less
+++ b/public/js/views/menu/room/primary-collection/primary-collection-item-view.less
@@ -64,6 +64,11 @@
   }
 }
 
+.room-item--active {
+  .room-item();
+  opacity: 1;
+}
+
 .room-item__container {
   display:        flex;
   flex-direction: row;
